// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SnackbarItem /> should render with just a message 1`] = `
<div
  class="crayons-snackbar__item flex"
>
  <div
    class="crayons-snackbar__body"
  >
    File uploaded successfully
  </div>
  <div
    class="crayons-snackbar__actions"
  />
</div>
`;

exports[`<SnackbarItem /> should render with multiple actions 1`] = `
<div
  class="crayons-snackbar__item flex"
>
  <div
    class="crayons-snackbar__body"
  >
    Unable to save file
  </div>
  <div
    class="crayons-snackbar__actions"
  >
    <button
      class="crayons-btn crayons-btn--ghost-success crayons-btn--inverted"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      Retry
    </button>
    <button
      class="crayons-btn crayons-btn--ghost-success crayons-btn--inverted"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      Abort
    </button>
  </div>
</div>
`;

exports[`<SnackbarItem /> should render with one action 1`] = `
<div
  class="crayons-snackbar__item flex"
>
  <div
    class="crayons-snackbar__body"
  >
    Changes saved
  </div>
  <div
    class="crayons-snackbar__actions"
  >
    <button
      class="crayons-btn crayons-btn--ghost-success crayons-btn--inverted"
      disabled={false}
      onClick={[MockFunction]}
      type="button"
    >
      Undo
    </button>
  </div>
</div>
`;
